Changed Product to Sofa and Changed all file names

--- a/ProductExamplePage/sofa.html
+++ b/ProductExamplePage/sofa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NY Coffee Table - Product Page</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/sofa_style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -18,14 +18,14 @@
                 <div class="wishlist-icon">
                     <i class="fa-regular fa-heart"></i>
                 </div>
-                <img src="images/table.jpg" alt="NY Coffee Table">
+                <img src="images/sofa.jpg" alt="Venice Cream Sofa">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </div>
 
             <div class="product-info">
-                <h1>NY COFFEE TABLE</h1>
-                <div class="price">£50</div>
+                <h1>Venice Cream Sofa</h1>
+                <div class="price">£295</div>
                 <p class="tagline">Bold, Modern, Elegant</p>
 
                 <div class="selectors">
@@ -52,7 +52,7 @@
                         <span>About this Item</span>
                         <i class="fa-solid fa-chevron-up"></i>
                     </div>
-                    <p>Add a touch of New York fashion to your Living Space with this Modern Coffee Table in a stunning Forest Green colour, with spacious drawer, and an open area beneath, this coffee table is sure to be the centre of attraction in your room.</p>
+                    <p>Add a touch of Italian fashion to your Living Space with this Modern Lounge Sofa in a stunning Cream colour, with duck feather filling, and a stunning chenille design, this sofa is sure to be the centre of attraction in your room.</p>
                 </div>
             </div>
         </section>
@@ -118,6 +118,6 @@
 
     </main>
 
-    <script src="js/script.js"></script>
+    <script src="js/sofa_script.js"></script>
 </body>
 </html>
