Refined work and added comments

--- a/Header and Footer/header_footer.html
+++ b/Header and Footer/header_footer.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    '' This is the header and footer template for LOFT & LIVING ''
     <meta charset="UTF-8">
     <title>LOFT & LIVING BIRMINGHAM</title>
     <link rel="stylesheet" href="header_footer_style.css">
     </head>
 <body>
 
+    '' Site Header: This section contains the logo, navigation menu, and user action icons ''
     <header class="site-header">
         <div class="header-inner">
             <button class="menu-btn" id="menu-toggle-btn">
@@ -32,6 +34,7 @@
             </div>
         </div>
 
+        '' Dropdown Navigation Menu: Here users can navigate to different product categories ''
         <nav class="dropdown-panel" id="dropdown-nav">
             <ul class="nav-links">
                 <li><a href="Categories.html">Living Room</a></li>
@@ -47,7 +50,7 @@
         <h1></h1>
     </main>
 
-
+'' Site Footer: This section contains social media links and additional navigation ''
     <footer class="site-footer">
         <div class="footer-inner">
             <div class="footer-section social-links">
@@ -69,6 +72,7 @@
                 </ul>
             </div>
 
+            '' Categories Section: Links to different product categories ''
             <div class="footer-section">
                 <h4>Categories</h4>
                 <ul>
