--- a/Draft/html/basket.html
+++ b/Draft/html/basket.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Basket</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/basket.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
 
                 <div class="item-details">
                     <h3 class="item-name">Modern Beige Sofa</h3>
-                    <p class="price">£259</p>
+                    <p class="price">£295</p>
                     <p class="qty">Quantity: 1</p>
                 </div>
             </div>
@@ -43,9 +43,9 @@
 
             <div class="summary-box">
                 <h3>Your Basket Total</h3>
-                <p>Basket: £259</p>
+                <p>Basket: £295</p>
                 <p>Discount: £0</p>
-                <p><strong>Total: £259</strong></p>
+                <p><strong>Total: £295</strong></p>
                 <button class="checkout-btn">Checkout</button>
             </div>
 
