--- a/Draft/html/Homepage.html
+++ b/Draft/html/Homepage.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="../css/homepage.css">
-    <link rel="stylesheet" href="homepage-about.css">
-    <link rel="stylesheet" href="homepage-contact.css">
+    <link rel="stylesheet" href="../css/homepage-about.css">
+    <link rel="stylesheet" href="../css/homepage-contact.css">
 </head>
 <body>
 
