--- a/Draft/html/basket.html
+++ b/Draft/html/basket.html
@@ -21,7 +21,7 @@
         <div class="basket-items">
 
             <div class="basket-item">
-                <img src="sofa.jpg" alt="Sofa" class="item-image">
+                <img src="../images/basket-images/sofa.jpg" alt="Sofa" class="item-image">
 
                 <div class="item-details">
                     <h3 class="item-name">Modern Beige Sofa</h3>
@@ -57,8 +57,8 @@
             </div>
 
             <div class="pay-buttons">
-                <img src="applepay.png" alt="Apple Pay" class="pay-btn">
-                <img src="googlepay.png" alt="Google Pay" class="pay-btn">
+                <img src="../images/basket-images/applepay.png" alt="Apple Pay" class="pay-btn">
+                <img src="../images/basket-images/googlepay.png" alt="Google Pay" class="pay-btn">
             </div>
 
         </aside>
