--- a/Draft/html/header_footer.html
+++ b/Draft/html/header_footer.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    '' This is the header and footer template for LOFT & LIVING ''
+    <!-- '' This is the header and footer template for LOFT & LIVING '' -->
     <meta charset="UTF-8">
     <title>LOFT & LIVING BIRMINGHAM</title>
-    <link rel="stylesheet" href="header_footer_style.css">
+    <link rel="stylesheet" href="../css/header_footer_style.css">
     </head>
 <body>
 
-    '' Site Header: This section contains the logo, navigation menu, and user action icons ''
+    <!-- '' Site Header: This section contains the logo, navigation menu, and user action icons '' -->
     <header class="site-header">
         <div class="header-inner">
             <button class="menu-btn" id="menu-toggle-btn">
-                <img src="header_footer_images/icon-menu.png" alt="Menu" class="ui-icon" id="menu-icon-img"> 
+                <img src="../images/header_footer_images/icon-menu.png" alt="Menu" class="ui-icon" id="menu-icon-img"> 
             </button>
 
             <div class="logo-wrapper">
                 <a href="Homepage.html">
-                    <img src="header_footer_images/logo.png" alt="LOFT & LIVING" class="main-logo">
+                    <img src="../images/header_footer_images/logo.png" alt="LOFT & LIVING" class="main-logo">
                 </a>
             </div>
 
             <div class="header-actions">
                 <a href="favourites.html">
-                    <img src="header_footer_images/icon-heart.png" alt="Favourites" class="ui-icon">
+                    <img src="../images/header_footer_images/icon-heart.png" alt="Favourites" class="ui-icon">
                 </a>
                 <a href="signin.html">
-                    <img src="header_footer_images/icon-user.png" alt="My Account" class="ui-icon">
+                    <img src="../images/header_footer_images/icon-user.png" alt="My Account" class="ui-icon">
                 </a>
                 <a href="basket.html">
-                    <img src="header_footer_images/icon-basket.png" alt="Basket" class="ui-icon">
+                    <img src="../images/header_footer_images/icon-basket.png" alt="Basket" class="ui-icon">
                 </a>
             </div>
         </div>
-
-        '' Dropdown Navigation Menu: Here users can navigate to different product categories ''
+<!-- 
+        '' Dropdown Navigation Menu: Here users can navigate to different product categories '' -->
         <nav class="dropdown-panel" id="dropdown-nav">
             <ul class="nav-links">
                 <li><a href="Categories.html">Living Room</a></li>
@@ -50,15 +50,15 @@
         <h1></h1>
     </main>
 
-'' Site Footer: This section contains social media links and additional navigation ''
+<!-- '' Site Footer: This section contains social media links and additional navigation '' -->
     <footer class="site-footer">
         <div class="footer-inner">
             <div class="footer-section social-links">
                 <a href="#">
-                    <img src="header_footer_images/icon-twitter.png" alt="Twitter" class="social-icon">
+                    <img src="../images/header_footer_images/icon-twitter.png" alt="Twitter" class="social-icon">
                 </a>
                 <a href="#">
-                    <img src="header_footer_images/icon-instagram.png" alt="Instagram" class="social-icon">
+                    <img src="../images/header_footer_images/icon-instagram.png" alt="Instagram" class="social-icon">
                 </a>
             </div>
 
@@ -72,7 +72,7 @@
                 </ul>
             </div>
 
-            '' Categories Section: Links to different product categories ''
+            <!-- '' Categories Section: Links to different product categories '' -->
             <div class="footer-section">
                 <h4>Categories</h4>
                 <ul>
