added images to homepage

--- a/Draft/html/Homepage.html
+++ b/Draft/html/Homepage.html
@@ -16,7 +16,7 @@
     <a class="category living" href="livingroom.html">
         <div class="title-box">LIVING ROOM</div> 
         <div class="image-box">
-            <img src="pictures/livingroom.png" alt="Living Room">
+            <img src="../images/homepage-images/livingroom.png" alt="Living Room">
         </div>
     </a>
 
@@ -24,7 +24,7 @@
     <a class="category kitchen" href="kitchen.html">
         <div class="title-box">KITCHEN</div>
         <div class="image-box">
-            <img src="pictures/kitchen.png" alt="Kitchen">
+            <img src="../images/homepage-images/kitchen.png" alt="Kitchen">
         </div>
     </a>
 
@@ -32,7 +32,7 @@
     <a class="category office" href="office.html">
         <div class="title-box">OFFICE</div>
         <div class="image-box">
-            <img src="pictures/office_final.png" alt="Office">
+            <img src="../images/homepage-images/office_final.png" alt="Office">
         </div>
     </a>
 
@@ -40,7 +40,7 @@
     <a class="category bathroom" href="bathroom.html">
         <div class="title-box">BATHROOM</div>
         <div class="image-box">
-            <img src="pictures/bathroom.png" alt="Bathroom">
+            <img src="../images/homepage-images/bathroom.png" alt="Bathroom">
         </div>
     </a>
 
@@ -48,7 +48,7 @@
     <a class="category bedroom" href="bedroom.html">
         <div class="title-box">BEDROOM</div>
         <div class="image-box">
-            <img src="pictures/bedroom.png" alt="Bedroom">
+            <img src="../images/homepage-images/bedroom.png" alt="Bedroom">
         </div>
     </a>
 
@@ -85,7 +85,7 @@
     <!-- <div class="image-border"> -->
 
 <div class="image-place">
-<img src="pictures/homepage-logo.png" alt="logo">
+<img src="../images/about-logo.png" alt="logo">
 </div>
 </div>
 </div>
