--- a/Draft/html/basket.html
+++ b/Draft/html/basket.html
@@ -46,14 +46,18 @@
                 <p>Basket: £295</p>
                 <p>Discount: £0</p>
                 <p><strong>Total: £295</strong></p>
-                <button class="checkout-btn">Checkout</button>
+                <!-- <button class="checkout-btn">Checkout</button> -->
+                 <button class="checkout-btn" onclick="window.location.href='checkout.html'">Checkout</button>
+
             </div>
 
             <div class="checkout-info">
                 <h3>Ready To Checkout?</h3>
                 <p>On the next page you’ll be asked to log in or sign up if
                 this is your first time, so you can confirm as a guest.</p>
-                <button class="checkout-btn">Checkout</button>
+                <!-- <button class="checkout-btn">Checkout</button> -->
+                 <button class="checkout-btn" onclick="window.location.href='checkout.html'">Checkout</button>
+
             </div>
 
             <div class="pay-buttons">
