--- a/Draft/html/basket.html
+++ b/Draft/html/basket.html
@@ -47,7 +47,7 @@
                 <p>Discount: £0</p>
                 <p><strong>Total: £295</strong></p>
                 <!-- <button class="checkout-btn">Checkout</button> -->
-                 <button class="checkout-btn" onclick="window.location.href='checkout.html'">Checkout</button>
+                 <button class="checkout-btn" onclick="window.location.href='signup.html'">Checkout</button>
 
             </div>
 
@@ -56,7 +56,7 @@
                 <p>On the next page you’ll be asked to log in or sign up if
                 this is your first time, so you can confirm as a guest.</p>
                 <!-- <button class="checkout-btn">Checkout</button> -->
-                 <button class="checkout-btn" onclick="window.location.href='checkout.html'">Checkout</button>
+                 <button class="checkout-btn" onclick="window.location.href='signup.html'">Checkout</button>
 
             </div>
 
