--- a/Draft/html/header_footer.html
+++ b/Draft/html/header_footer.html
@@ -93,6 +93,6 @@
             </div>
         </div>
     </footer>
-    <script src="header_footer_script.js"></script>
+    <script src="../javascript/header_footer_script.js"></script>
 </body>
 </html>
