--- a/Draft/html/Homepage.html
+++ b/Draft/html/Homepage.html
@@ -182,6 +182,6 @@
             </div>
         </div>
     </footer>
-    <script src="header_footer_script.js"></script>
+    <script src="../javascript/header_footer_script.js"></script>
 </body>
 </html>
