organised homepage files into a folder

--- a/Draft/html/Homepage.html
+++ b/Draft/html/Homepage.html
@@ -7,9 +7,9 @@
     
     <link rel="stylesheet" href="../css/header_footer_style.css">
 
-    <link rel="stylesheet" href="../css/homepage.css">
-    <link rel="stylesheet" href="../css/homepage-about.css">
-    <link rel="stylesheet" href="../css/homepage-contact.css">
+    <link rel="stylesheet" href="../css/homepage-css/homepage.css">
+    <link rel="stylesheet" href="../css/homepage-css/homepage-about.css">
+    <link rel="stylesheet" href="../css/homepage-css/homepage-contact.css">
 </head>
 <body>
 
