--- a/Draft/html/livingroom.html
+++ b/Draft/html/livingroom.html
@@ -85,7 +85,7 @@
     data-new="true" data-price="295" data-rating="4" onclick="location.href='../html/sofa.html'">
      <img src="../images/livingroom-images/sofa.jpg" alt="item 1"> 
               <div class="product-text">
-            <h2> Sofa </h2>
+            <h2> Venice Cream Sofa </h2>
             <p> £295 </p>
               </div>
     </div>
@@ -94,7 +94,7 @@
  data-new="true" data-price="8" data-rating="3">
          <img src="../images/livingroom-images/throwpillow3.jpg" alt="item 2">
          <div class="product-text">
-            <h2> Throw Pillow</h2>
+            <h2> Oxford Throw Pillow</h2>
             <p> £8 </p>
          </div>
     </div>
@@ -103,7 +103,7 @@
       data-new="true" data-price="20" data-rating="4">
        <img src="../images/livingroom-images/throwblanket3.jpg" alt="item 3">
                   <div class="product-text">
-            <h2> Throw Blanket</h2>
+            <h2> Rusted Throw Blanket</h2>
             <p> £20 </p>
     </div>
       </div>
@@ -112,7 +112,7 @@
   data-new="true" data-price="70" data-rating="4">
          <img src="../images/livingroom-images/rug.png" alt="item 4" >
                   <div class="product-text">
-            <h2> Rug </h2>
+            <h2> Faux Fur Rug </h2>
             <p> £70 </p>
     </div>
   </div>
@@ -122,7 +122,7 @@
 
          <img src="../images/livingroom-images/consoletable.png" alt="item 5" >
                   <div class="product-text">
-            <h2> Console table </h2>
+            <h2> NY Console table </h2>
             <p> £25 </p>
         </div>
     </div>
