added js file to sofa.html

--- a/Draft/html/sofa.html
+++ b/Draft/html/sofa.html
@@ -4,7 +4,7 @@
     <!-- <! Setting up meta tags and linking stylesheets and fonts -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NY Coffee Table - Product Page</title>
+    <title>Venice Cream Sofa - Product Page</title>
     <link rel="stylesheet" href="../css/sofa_style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -22,7 +22,7 @@
                 </div>
                 <img src="../images/basket-images/sofa.jpg" alt="Venice Cream Sofa">
                     <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
+              
             </div>
 
             <!-- <! Product Information Section: Title, Price, Tagline, Selectors, Add to Basket Button, Description -- --> 
@@ -122,6 +122,6 @@
 
     </main>
 
-    <script src="js/sofa_script.js"></script>
+    <script src="../javascript/sofa_script.js"></script>
 </body>
 </html>
