--- a/Draft/html/Homepage.html
+++ b/Draft/html/Homepage.html
@@ -45,7 +45,7 @@
                 <li><a href="bedroom.html">Bedroom</a></li>
                 <li><a href="office.html">Office</a></li>
                 <li><a href="kitchen.html">Kitchen</a></li>
-                <li class="nav-divider"><a href="login.html">My Account</a></li>
+                <li class="nav-divider"><a href="signin.html">My Account</a></li>
             </ul>
         </nav>
     </header>
