changed html links on homepage

--- a/Draft/html/Homepage.html
+++ b/Draft/html/Homepage.html
@@ -20,7 +20,7 @@
             </button>
 
             <div class="logo-wrapper">
-                <a href="Homepage.html">
+                <a href="homepage.html">
                     <img src="../images/header_footer_images/logo.png" alt="LOFT & LIVING" class="main-logo">
                 </a>
             </div>
