--- a/Draft/html/sofa.html
+++ b/Draft/html/sofa.html
@@ -19,6 +19,7 @@
             <div class="product-image">
                 <div class="wishlist-icon">
                     <i class="fa-regular fa-heart"></i>
+                
                 </div>
                 <img src="../images/basket-images/sofa.jpg" alt="Venice Cream Sofa">
                     <i class="fa-solid fa-magnifying-glass"></i>
@@ -71,7 +72,7 @@
                     
                     <div class="review-card">
                         <div class="stars">
-                            <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
+                            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                         </div>
                         <h3>Love It.</h3>
                         <p>Happy with the quality.</p>
@@ -86,9 +87,9 @@
 
                     <div class="review-card">
                         <div class="stars">
-                            <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
+                            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                         </div>
-                        <h3>The Green is Beautiful</h3>
+                        <h3>The Beige Colour is Beautiful</h3>
                         <p>An excellent pop of colour.</p>
                         <div class="reviewer">
                             <img src="https://ui-avatars.com/api/?name=Amatullaah+S&background=random" alt="User">
@@ -101,10 +102,10 @@
 
                     <div class="review-card">
                         <div class="stars">
-                            <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
+                            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
                         </div>
                         <h3>Smaller than Expected.</h3>
-                        <p>Great Table, Looks bigger online.</p>
+                        <p>Great Sofa, but looks bigger online.</p>
                         <div class="reviewer">
                             <img src="https://ui-avatars.com/api/?name=Manaal+A&background=random" alt="User">
                             <div>
@@ -113,7 +114,20 @@
                             </div>
                         </div>
                     </div>
-
+                                        <div class="review-card">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                        </div>
+                        <h3>Very comfy and soft.</h3>
+                        <p>Amazing sofa, I even slept in it!.</p>
+                        <div class="reviewer">
+                            <img src="https://ui-avatars.com/api/?name=Manaal+A&background=random" alt="User">
+                            <div>
+                                <span class="name">Navdeep Malhi</span>
+                                <span class="date">18th November 2025</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <button class="nav-btn next-btn" onclick="scrollReviews('right')"><i class="fa-solid fa-chevron-right"></i></button>
