--- a/Draft/html/Homepage.html
+++ b/Draft/html/Homepage.html
@@ -119,7 +119,9 @@
     <main>
         <section>
             <div class="form-container">
-            <form id="contact-form" onsubmit="return validateForm()">
+            <form id="contact-form" action="https://formspree.io/f/xzzlerol" method="POST">
+                <input type="text" name="_gotcha" style="display: none;" />
+            <!-- <form id="contact-form" onsubmit="return validateForm()"> -->
                 <label for="first">Name<span class="required">*</span> </label>
                 <input type="text" id="first" name="first" placeholder="First Name" required>
                 
