adjusted fonts/padding

--- a/checkout.html
+++ b/checkout.html
@@ -39,7 +39,7 @@
  <section class="details-column">
     
 <section class="review-box">
-<h1 class="form-title">REVIEW</h1>
+<h1 class="form-title">REVIEW: </h1>
 
 <form class="form-fields" method="POST" action="/routes/reviewRoutes.php">
 <label class="input-group">
@@ -68,8 +68,8 @@
 
 <section class="delivery-section">
 <p>Ready for Loft & Living in Your Home?</p>
-<p>Your Order will be dispatched using <strong> Standard Delivery</p>
-<p>Estimated Delivery:  <strong> 9th December 2025</p>
+<p>Your Order will be dispatched using <strong> Standard Delivery</strong></p>
+<p>Estimated Delivery:  <strong> 9th December 2025</strong></p>
 
     <section class="payment-options">
     <button>Checkout</button>
