added google pay and apple pay

--- a/checkout.html
+++ b/checkout.html
@@ -29,7 +29,7 @@
 
     <div class="product-text">
         <p>Venice Cream Sofa</p>
-        <p class="price"><strong>£295</p>
+        <p class="price">£295</p>
         <p class="quantity">Quantity: 1</p>
 </div>
 </div>
@@ -66,15 +66,19 @@
     </form>
 </section>
 
-<section class="delivery-section">
+<div class="delivery-section">
 <p>Ready for Loft & Living in Your Home?</p>
-<p>Your Order will be dispatched using <strong> Standard Delivery</strong></p>
-<p>Estimated Delivery:  <strong> 9th December 2025</strong></p>
+<p>Your Order will be dispatched using Standard Delivery </p>
+<p>Estimated Delivery: 9th December 2025</p>
 
-    <section class="payment-options">
-    <button>Checkout</button>
-     <button>Pay with Apple Pay</button>
-      <button>Pay with Google Pay</button>
+<button class="checkout-btn" onclick="window.location.href='signup.html'">Checkout</button>
+</div>
+
+
+    <div class="pay-buttons">
+                <img src="applepay.png" alt="Apple Pay" class="pay-btn">
+                <img src="googlepay.png" alt="Google Pay" class="pay-btn">
+    </div>
 </section>
 </section>
 </main>
