fixed names of html files

--- a/Draft/html/header_footer.html
+++ b/Draft/html/header_footer.html
@@ -16,7 +16,7 @@
             </button>
 
             <div class="logo-wrapper">
-                <a href="Homepage.html">
+                <a href="homepage.html">
                     <img src="../images/header_footer_images/logo.png" alt="LOFT & LIVING" class="main-logo">
                 </a>
             </div>
@@ -37,12 +37,12 @@
         '' Dropdown Navigation Menu: Here users can navigate to different product categories '' -->
         <nav class="dropdown-panel" id="dropdown-nav">
             <ul class="nav-links">
-                <li><a href="Categories.html">Living Room</a></li>
+                <li><a href="livingroom.html">Living Room</a></li>
                 <li><a href="bathroom.html">Bathroom</a></li>
                 <li><a href="bedroom.html">Bedroom</a></li>
                 <li><a href="office.html">Office</a></li>
                 <li><a href="kitchen.html">Kitchen</a></li>
-                <li class="nav-divider"><a href="login.html">My Account</a></li>
+                <li class="nav-divider"><a href="signin.html">My Account</a></li>
             </ul>
         </nav>
     </header>
@@ -65,10 +65,10 @@
             <div class="footer-section">
                 <h4>Navigation</h4>
                 <ul>
-                    <li><a href="Homepage.html">Homepage</a></li>
-                    <li><a href="login.html">My Account</a></li>
+                    <li><a href="homepage.html">Homepage</a></li>
+                    <li><a href="signin.html">My Account</a></li>
                     <li><a href="favourites.html">Favourites</a></li>
-                    <li><a href="Basket.html">Basket</a></li>
+                    <li><a href="basket.html">Basket</a></li>
                 </ul>
             </div>
 
@@ -76,7 +76,7 @@
             <div class="footer-section">
                 <h4>Categories</h4>
                 <ul>
-                    <li><a href="categories.html">Living Room</a></li>
+                    <li><a href="livingroom.html">Living Room</a></li>
                     <li><a href="office.html">Offices</a></li>
                     <li><a href="kitchen.html">Kitchen</a></li>
                     <li><a href="bathroom.html">Bathrooms</a></li>
@@ -88,7 +88,7 @@
                 <h4>More...</h4>
                 <ul>
                     <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="About.html">About Us</a></li>
+                    <li><a href="about.html">About Us</a></li>
                 </ul>
             </div>
         </div>
