--- a/Draft/html/basket.html
+++ b/Draft/html/basket.html
@@ -38,7 +38,7 @@
             <div class="discount-box">
                 <label>Any Discount or Promotional Codes?</label>
                 <input type="text" placeholder="Enter code">
-                <button class="discount-btn">Add Discount</button>
+                <button class="discount-btn">Add Discount</button> 
             </div>
 
             <div class="summary-box">
@@ -46,8 +46,7 @@
                 <p>Basket: £295</p>
                 <p>Discount: £0</p>
                 <p><strong>Total: £295</strong></p>
-                <!-- <button class="checkout-btn">Checkout</button> -->
-                 <button class="checkout-btn" onclick="window.location.href='signup.html'">Checkout</button>
+                
 
             </div>
 
@@ -55,8 +54,7 @@
                 <h3>Ready To Checkout?</h3>
                 <p>On the next page you’ll be asked to log in or sign up if
                 this is your first time, so you can confirm as a guest.</p>
-                <!-- <button class="checkout-btn">Checkout</button> -->
-                 <button class="checkout-btn" onclick="window.location.href='signup.html'">Checkout</button>
+                 <button class="checkout-btn" onclick="window.location.href='checkout.html'">Checkout</button>
 
             </div>
 
