--- a/Draft/html/sofa.html
+++ b/Draft/html/sofa.html
@@ -49,7 +49,8 @@
                     </div>
                 </div>
 
-                <button class="add-to-basket">Add to Basket</button>
+    <button class="add-to-basket" onclick="window.location.href='basket.html'">Add to Basket</button>
+
 
                 <div class="description-box">
                     <div class="desc-header">
