Fixed Navigation for Living Room pages

--- a/Draft/html/About.html
+++ b/Draft/html/About.html
@@ -38,7 +38,7 @@
 
         <nav class="dropdown-panel" id="dropdown-nav">
             <ul class="nav-links">
-                <li><a href="Categories.html">Living Room</a></li>
+                <li><a href="livingroom.html">Living Room</a></li>
                 <li><a href="bathroom.html">Bathroom</a></li>
                 <li><a href="bedroom.html">Bedroom</a></li>
                 <li><a href="office.html">Office</a></li>
