--- a/Draft/html/basket.html
+++ b/Draft/html/basket.html
@@ -128,7 +128,7 @@
             <div class="footer-section">
                 <h4>Categories</h4>
                 <ul>
-                    <li><a href="categories.html">Living Room</a></li>
+                    <li><a href="livingroom.html">Living Room</a></li>
                     <li><a href="office.html">Offices</a></li>
                     <li><a href="kitchen.html">Kitchen</a></li>
                     <li><a href="bathroom.html">Bathrooms</a></li>
