Trying to fix pages

--- a/Draft/html/livingroom.html
+++ b/Draft/html/livingroom.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Living Room | LOFT & LIVING</title>
 
-
+    <link rel="stylesheet" href="../css/header_footer_style.css">
 
     <link rel="stylesheet" href="../css/livingroom-css/livingroom-base.css">
     <link rel="stylesheet" href="../css/livingroom-css/livingroom-structure.css">
     <link rel="stylesheet" href="../css/livingroom-css/livingroom-reusable.css">
     <link rel="stylesheet" href="../css/livingroom-css/livingroom-page.css">
-    <link rel="stylesheet" href="../css/header_footer_style.css">
 </head>
 <body>
 
@@ -185,7 +184,7 @@
             <div class="footer-section">
                 <h4>Categories</h4>
                 <ul>
-                    <li><a href="livingroom.html">Living Room</a></li>
+                    <li><a href="livi.html">Living Room</a></li>
                     <li><a href="office.html">Offices</a></li>
                     <li><a href="kitchen.html">Kitchen</a></li>
                     <li><a href="bathroom.html">Bathrooms</a></li>
