--- a/Draft/html/signin.html
+++ b/Draft/html/signin.html
@@ -157,7 +157,7 @@
         const email = document.querySelector('input[type="email"]').value.trim();
         const password = document.querySelector('input[type="password"]').value.trim();
         if (!email || !password) { alert("Please fill in both fields."); return; }
-        if (email && password) { window.location.href = "homepage.html"; }
+        if (email && password) { window.location.href = "checkout.html"; }
       });
     </script>
     <script src="../javascript/header_footer_script.js"></script>
