changed basket link to signup instead of sign in

--- a/Draft/html/basket.html
+++ b/Draft/html/basket.html
@@ -96,7 +96,7 @@
                 <h3>Ready To Checkout?</h3>
                 <p>On the next page you’ll be asked to log in or sign up if
                 this is your first time, so you can confirm as a guest.</p>
-                 <button class="checkout-btn" onclick="window.location.href='signin.html'">Checkout</button>
+                 <button class="checkout-btn" onclick="window.location.href='signup.html'">Checkout</button>
                                     <div class="pay-buttons">
 
                     <img src="../images/basket-images/applepay.png" alt="Apple Pay" class="pay-btn">
