link checkout to confirmation

--- a/Draft/html/checkout.html
+++ b/Draft/html/checkout.html
@@ -106,7 +106,7 @@
                 <p>Your Order will be dispatched using Standard Delivery </p>
                 <p>Estimated Delivery: 9th December 2025</p>
 
-                <button class="checkout-btn" onclick="window.location.href='signin.html'">Checkout</button>
+                <button class="checkout-btn" onclick="window.location.href='order_confirmation.html'">Checkout</button>
             </div>
 
         </section>
