--- a/Draft/html/Homepage.html
+++ b/Draft/html/Homepage.html
@@ -157,7 +157,7 @@
             <div class="footer-section">
                 <h4>Navigation</h4>
                 <ul>
-                    <li><a href="homepage.html">Homepage</a></li>
+                    <li><a href="Homepage.html">Homepage</a></li>
                     <li><a href="signin.html">My Account</a></li>
                     <li><a href="favourites.html">Favourites</a></li>
                     <li><a href="basket.html">Basket</a></li>
