--- a/Draft/html/order_confirmation.html
+++ b/Draft/html/order_confirmation.html
@@ -4,16 +4,107 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order Confirmation | LOFT & LIVING</title>
+
+    <link rel="stylesheet" href="../css/header_footer_style.css">
+
     <link rel="stylesheet" href="../css/order_confirmation.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+    <style>
+        /* 1. Global Layout: Vertical Stacking */
+        body {
+            display: flex !important;
+            flex-direction: column !important;
+            min-height: 100vh;
+            margin: 0;
+            background-color: #f9f9f9; /* Light grey background for contrast */
+        }
+
+        /* 2. Header Styles: Solid White & Spaced */
+        .site-header {
+            position: relative !important; 
+            width: 100%;
+            background-color: #ffffff !important;
+            z-index: 1000;
+            padding: 15px 0;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05); /* Subtle shadow */
+        }
+
+        .header-inner {
+            display: flex !important;
+            justify-content: space-between !important;
+            align-items: center !important;
+            width: 90%;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        /* 3. Main Content: Push down and Center */
+        main.confirm-container {
+            margin-top: 60px !important; /* Prevents hiding behind header */
+            margin-bottom: 60px !important; /* Space from footer */
+            flex: 1; /* Takes up available space */
+            width: 100%;
+            max-width: 800px; /* Keeps the content neat and centered */
+            align-self: center; /* Centers the block horizontally */
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* Centers items inside the main block */
+        }
+
+        /* 4. Footer Styles: Stick to Bottom */
+        .site-footer {
+            margin-top: auto;
+            width: 100%;
+            background-color: #fff;
+        }
+    </style>
 </head>
 
 <body>
+
+    <header class="site-header">
+        <div class="header-inner">
+            <button class="menu-btn" id="menu-toggle-btn">
+                <img src="../images/header_footer_images/icon-menu.png" alt="Menu" class="ui-icon" id="menu-icon-img"> 
+            </button>
+
+            <div class="logo-wrapper">
+                <a href="homepage.html">
+                    <img src="../images/header_footer_images/logo.png" alt="LOFT & LIVING" class="main-logo">
+                </a>
+            </div>
+
+            <div class="header-actions">
+                <a href="favourites.html">
+                    <img src="../images/header_footer_images/icon-heart.png" alt="Favourites" class="ui-icon">
+                </a>
+                <a href="signin.html">
+                    <img src="../images/header_footer_images/icon-user.png" alt="My Account" class="ui-icon">
+                </a>
+                <a href="basket.html">
+                    <img src="../images/header_footer_images/icon-basket.png" alt="Basket" class="ui-icon">
+                </a>
+            </div>
+        </div>
+
+        <nav class="dropdown-panel" id="dropdown-nav">
+            <ul class="nav-links">
+                <li><a href="livingroom.html">Living Room</a></li>
+                <li><a href="bathroom.html">Bathroom</a></li>
+                <li><a href="bedroom.html">Bedroom</a></li>
+                <li><a href="office.html">Office</a></li>
+                <li><a href="kitchen.html">Kitchen</a></li>
+                <li class="nav-divider"><a href="signin.html">My Account</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main class="confirm-container">
 
         <h1 class="confirm-title">ORDER CONFIRMED</h1>
 
-        <!-- Progress Bar -->
         <div class="progress-container">
             <div class="step completed"> Confirmed</div>
             <div class="divider"></div>
@@ -24,11 +115,8 @@
 
         <p class="confirm-text">
            Thank you for your purchase! 
-
-            <!-- Your order is now being processed! -->
         </p>
 
-        <!-- Order Box -->
         <div class="order-box">
 
             <h2 class="summary-title">ORDER SUMMARY</h2>
@@ -41,7 +129,6 @@
                 <span>Date:</span> <span>08 Dec 2025</span>
             </div>
 
-            <!-- Product Details -->
             <div class="product-row">
                 <img src="../images/basket-images/sofa.jpg" class="product-img" alt="Venice Cream Sofa">
 
@@ -67,6 +154,50 @@
         </div>
 
     </main>
+
+    <footer class="site-footer">
+        <div class="footer-inner">
+            <div class="footer-section social-links">
+                <a href="#">
+                    <img src="../images/header_footer_images/icon-twitter.png" alt="Twitter" class="social-icon">
+                </a>
+                <a href="#">
+                    <img src="../images/header_footer_images/icon-instagram.png" alt="Instagram" class="social-icon">
+                </a>
+            </div>
+
+            <div class="footer-section">
+                <h4>Navigation</h4>
+                <ul>
+                    <li><a href="homepage.html">Homepage</a></li>
+                    <li><a href="signin.html">My Account</a></li>
+                    <li><a href="favourites.html">Favourites</a></li>
+                    <li><a href="basket.html">Basket</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h4>Categories</h4>
+                <ul>
+                    <li><a href="livingroom.html">Living Room</a></li>
+                    <li><a href="office.html">Offices</a></li>
+                    <li><a href="kitchen.html">Kitchen</a></li>
+                    <li><a href="bathroom.html">Bathrooms</a></li>
+                    <li><a href="bedroom.html">Bedrooms</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h4>More...</h4>
+                <ul>
+                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
+    <script src="../javascript/header_footer_script.js"></script>
 
 </body>
 </html>
