--- a/Draft/html/checkout.html
+++ b/Draft/html/checkout.html
@@ -69,7 +69,7 @@
             <section class="review-box">
                 <h1 class="form-title">REVIEW: </h1>
 
-                <form class="form-fields" method="POST" action="../../routes/paymentRoutes.php">
+                <form class="form-fields">
                     <label class="input-group">
                         <span class="input-label">Name</span>
                         <input type="text" name="name" required> 
