removed fields for the checkout page

--- a/Draft/html/checkout.html
+++ b/Draft/html/checkout.html
@@ -66,24 +66,25 @@
 
         <section class="details-column">
             
-            <section class="review-box">
-                <h1 class="form-title">REVIEW: </h1>
+     <section class="review-box">
+    <h1 class="form-title">REVIEW:</h1>
 
-                <form class="form-fields">
-                    <label class="input-group">
-                        <span class="input-label">Name</span>
-                        <input type="text" name="name" required> 
-                    </label>
+    <div class="review-details">
+        <p><strong>Name:</strong> Emma Smith</p>
+        <p><strong>Email:</strong> emma.smith@example.com</p>
+        <p><strong>Address:</strong></p>
+        <p class="address-line">Aston University,</p>
+        <p class="address-line">Aston St,</p>
+        <p class="address-line">Birmigham,</p>
+        <p class="address-line">B4 7ET</p>
+    </div>
+</section>
 
-                    <label class="input-group">
-                        <span class="input-label">Email</span>
-                        <input type="email" name="email" required> 
-                    </label>
+<div class="card-buttons">
+    <button class="edit-btn">Edit Details</button>
+    <button class="address-btn">Change Address</button>
+</div>
 
-                    <label class="input-group">
-                        <span class="input-label">Address</span>
-                        <textarea name="address" rows="3" required></textarea>
-                    </label>
 
                     <div class="card-fields">
                         <h2>Card Details</h2>
@@ -98,8 +99,6 @@
                             <img src="../images/basket-images/googlepay.png" alt="Google Pay" class="pay-btn">
                         </div>
                     </div>
-                </form>
-            </section>
 
             <div class="delivery-section">
                 <p>Ready for Loft & Living in Your Home?</p>
